--- a/client/styles/quarks/_borders.scss
+++ b/client/styles/quarks/_borders.scss
@@ -1,11 +1,11 @@
 /*-------------------------------------*\
-    HEADINGS
+    BORDERS
 \*-------------------------------------*/
 
 /**
- * Headings 
+ * Borders 
  * 
- * 
+ * Classes for styled borders
  * 
     
  * 
