--- a/client/styles/quarks/_gradients.scss
+++ b/client/styles/quarks/_gradients.scss
@@ -1,9 +1,9 @@
 /*-------------------------------------*\
-    HEADINGS
+    GRADIENTS
 \*-------------------------------------*/
 
 /**
- * Headings 
+ * Gradients 
  * 
  * 
  * 
