--- a/client/styles/atoms/_selections.scss
+++ b/client/styles/atoms/_selections.scss
@@ -1,9 +1,9 @@
 /*-------------------------------------*\
-    HEADINGS
+    SELECTIONS
 \*-------------------------------------*/
 
 /**
- * Headings 
+ * Selections 
  * 
  * 
  * 
