--- a/client/styles/molecules/_poll-form.scss
+++ b/client/styles/molecules/_poll-form.scss
@@ -41,6 +41,7 @@
         outline: 0;
 
         @include border-radius(6px);
+        @include transition(opacity .5s);
         @include box-shadow((
             0 2px 2px #e0e0e0
         ));
