--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -63,6 +63,7 @@
 @import 'atoms/links';
 @import 'atoms/lists';
 @import 'atoms/selections';
+@import 'atoms/forms';
 @import 'atoms/slabs';
 
 
@@ -75,6 +76,8 @@
 
 
 /*---   Organisms   ---*/
+
+@import 'organisms/comments';
 
 
 
