--- a/client/styles/atoms/_buttons.scss
+++ b/client/styles/atoms/_buttons.scss
@@ -11,3 +11,31 @@
  * 
  */ 
  
+
+.button,
+button {
+    color: #fff;
+    font-weight: bold;
+    padding: unit(.25) 0;
+    border: 0;
+    background: #4eadec;
+    outline: 0;
+
+    @include border-radius(6px);
+    @include transition(opacity .5s);
+    @include box-shadow((
+        0 2px 2px #e0e0e0
+    ));
+
+    &:focus,
+    &:hover {
+        background: #6cc1fa;
+    }
+}
+
+.button--jiggly {
+    &:focus,
+    &:hover {
+        @include animation(jiggle .25s);
+    }
+}
