--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -32,6 +32,7 @@
 @import 'compass';
 @import 'normalize';
 @import 'csswizardry-grids';
+@import 'breakpoint';
 
 /*---   Quarks   ---*/
 
@@ -79,6 +80,7 @@
 /*---   Organisms   ---*/
 
 @import 'organisms/comments';
+@import 'organisms/site-header';
 
 
 
