--- a/client/styles/organisms/_comments.scss
+++ b/client/styles/organisms/_comments.scss
@@ -29,7 +29,7 @@
     }
 
         %comment__footer {
-            font-size: 13px;
+            font-size: .7em;
         }
 
             %comment__author {
