--- a/client/styles/quarks/_fonts.scss
+++ b/client/styles/quarks/_fonts.scss
@@ -38,4 +38,7 @@
     Stacks
 \*-------------------------------------*/
 
-$f-body: verdana, arial, sans-serif;
+$f-lato: 'Lato', arial, sans-serif;
+$f-lily: 'Lily Script One', cursive;
+
+$f-body: 'Lato', arial, sans-serif;
