--- a/views/partials/header.html
+++ b/views/partials/header.html
@@ -1,3 +1,15 @@
-<h1>Popoll!</h1>
+<header class="site__header  align-center  grid  plain--links">
 
-<h4>Make polls quickly and share them with others just as fast!</h4>
+    <div class="site__navigation  grid__item  one-third">
+        <a href="#">Start a poll</a>
+    </div><!--
+
+ --><h1 class="site__title  grid__item  one-third">
+        <a href="/">poshpoll!</a>
+    </h1><!--
+
+ --><div class="site__navigation  grid__item  one-third">
+        <a href="#">Sign-up/Sign-in</a>
+    </div>
+
+</header><!-- site__header -->
