--- a/views/poll.html
+++ b/views/poll.html
@@ -12,7 +12,7 @@
     </section>
 
     <form v-on="submit: choiceSubmit">
-        <input v-model="newChoice" placeholder="Add a new choice" class="two-thirds  input"></textarea>
+        <input v-model="newChoice" placeholder="Add a new choice" class="two-thirds  palm--one-whole  input"></textarea>
     </form>
 </section>
 
@@ -36,7 +36,7 @@
     <form v-on="submit: commentSubmit">
         <textarea v-model="newCommentBody" class="one-whole  textarea"></textarea>
 
-        <button class="one-third  float-right">New Comment</button>
+        <button class="one-third  lap--two-thirds  palm--one-whole  float-right">New Comment</button>
     </form>
 </section>
 </div>
