--- a/client/styles/molecules/_poll-form.scss
+++ b/client/styles/molecules/_poll-form.scss
@@ -20,37 +20,18 @@
 }
 
     %poll-form__input {
+        color: #2e2e2e;
         padding: unit(.25) 0;
-        border: 1px solid #e0e0e0;
         background: #d8eff3;
+        border: 0;
 
         outline: 0;
 
         @include border-radius(4px);
         @include box-shadow((
-            0 1px 2px #acacac inset
+            0 2px 4px shade(#d8eff3, 18) inset,
+            0 0 0 2px $c-orange
         ));
-    }
-
-    %poll-form__button {
-        color: #fff;
-        font-weight: bold;
-        padding: unit(.25) 0;
-        border: 0;
-        background: #4eadec;
-        outline: 0;
-
-        @include border-radius(6px);
-        @include transition(opacity .5s);
-        @include box-shadow((
-            0 2px 2px #e0e0e0
-        ));
-
-        &:focus,
-        &:hover {
-            background: #6cc1fa;
-            @include animation(jiggle .25s);
-        }
     }
 
 
