--- a/views/index.html
+++ b/views/index.html
@@ -1,11 +1,15 @@
+<h2 class="theta  site__tagline">Make polls quickly and share them!</h4>
+
 <form v-on="submit: submit" class="js-poll-form  poll-form  align-center">
     <input v-model="question" placeholder="Start typing to start a new poll!" class="align-center  one-whole  poll-form__input  nudge-half--bottom">
 
-    <button v-class="invisible: !isValid" class="button--jiggly  invisible  one-half">Start That Poll Son!</button>
+    <div v-class="invisible: !isValid" class="animate  invisible">
+        <button class="button--illuminated  button--jiggly  one-half">Start That Poll, Son!</button>
+    </div>
 </form>
 
 
-<h3>My polls</h3>
+<h3>Recent Polls</h3>
 
 <ul class="poll-list  list--plain">
     <li class="poll-list__item">
@@ -15,22 +19,38 @@
                 <a href="#" class="icon--eye  poll-list__watch"></a>
             </footer>
 
-            <h4 class="poll-list__question  float-left">What's the best action flic ever?</h4>
+            <h4 class="poll-list__question  float-left">
+                <a href="#" class="link--plain">
+                    What's the best action flic ever?
+                </a>
+            </h4>
 
             <h4 class="poll-list__answer  align-center">This One</h4>
+
+            <ul class="poll-list__options  list--plain">
+                <li>
+                    This One
+                </li>
+                <li>
+                    Another Option
+                </li>
+                <li>
+                    A Rather Long Option, For Testing
+                </li>
+            </ul><!-- poll-list__options -->
         </section>
     </li>
 
     <li class="poll-list__item">
         <section class="clear-fix">
             <footer class="plain--links  poll-list__actions  float-right">
-                <time class="poll-list__time">00:56</time>
+                <time class="poll-list__time">01:06</time>
                 <a href="#" class="icon--eye  poll-list__watch"></a>
             </footer>
 
-            <h4 class="poll-list__question  float-left">What's the best action flic ever?</h4>
+            <h4 class="poll-list__question  float-left">What movie should we watch?</h4>
 
-            <h4 class="poll-list__answer  align-center">This One</h4>
+            <h4 class="poll-list__answer  align-center">Option</h4>
         </section>
     </li>
 
