--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -7,6 +7,7 @@
 
     <title>{{default title 'Make Polls! Popollo!' }}</title>
 
+    <link href='http://fonts.googleapis.com/css?family=Lato:100,400,700,900,400italic,700italic|Lily+Script+One' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="/styles/main.css">
 
 </head>
